# fluent-logger-python

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  build.py  pyproject.toml  requirements-dev.txt  run_tests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  test.yml
fluent/: __about__.py  __init__.py  asynchandler.py  asyncsender.py  event.py  handler.py  logger.py  sender.py  transport.py
src/main/python/fluent/: asynchandler.py  asyncsender.py  sender.py
src/unittest/python/: fluentd_tester.py  mockserver.py  test_asynchandler.py  test_asyncsender.py  test_event.py  test_handler.py  test_sender.py
tests/: __init__.py  mockserver.py  test_asynchandler.py  test_asyncsender.py  test_event.py  test_handler.py  test_sender.py  test_uds_sender.py
