[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluent-logger"
dynamic = ["version"]
description = "A Python logging handler for Fluentd event collector"
readme = "README.rst"
license = { file = "COPYING" }
requires-python = ">=3.7"
authors = [
    { name = "Kazuki Ohta", email = "kazuki.ohta@gmail.com" },
]
maintainers = [
    { name = "Arcadiy Ivanov", email = "arcadiy@ivanov.biz" },
    { name = "Inada Naoki", email = "songofacandy@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Logging",
]
dependencies = [
    "msgpack>=1.0",
]

[project.urls]
Download = "https://pypi.org/project/fluent-logger/"
Homepage = "https://github.com/fluent/fluent-logger-python"

[tool.hatch.version]
path = "fluent/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.tox",
    "/.venv",
]

[tool.hatch.build.targets.wheel]
include = [
    "/fluent",
]
